# open-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-plz.toml
.github/: SMOKE_ACTIONS
.github/workflows/: ci.yml  guard-master.yml  manual-version-bump.yml  release.yml
crates/ov-audio/: Cargo.toml
crates/ov-audio/src/: lib.rs
crates/ov-cli/: Cargo.toml
crates/ov-cli/src/: cli.rs  compose.rs  main.rs
crates/ov-config/: Cargo.toml
crates/ov-config/src/: lib.rs
crates/ov-core/: Cargo.toml
crates/ov-core/src/: capabilities.rs  domain.rs  error.rs  lib.rs  ports.rs  provider.rs
crates/ov-engine/: Cargo.toml
crates/ov-engine/src/: lib.rs
crates/ov-local/: Cargo.toml
crates/ov-local/src/: canary.rs  lib.rs  models.rs  qwen3_tts.rs
crates/ov-output/: Cargo.toml
crates/ov-output/src/: lib.rs
crates/ov-providers/: Cargo.toml
crates/ov-providers/src/: cartesia.rs  elevenlabs.rs  http.rs  lib.rs  openai.rs  xai.rs
crates/ov-providers/tests/: cartesia.rs  elevenlabs.rs  openai.rs  xai_batch.rs  xai_stream.rs
