[package]
name = "ov-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-voice CLI (openvoice): agnostic speech-to-text + text-to-speech"
# No `publish = false` here: release-plz only tags/releases packages that
# cargo-metadata reports as publishable, so setting it would make `release-plz
# release` see "nothing to release" (the v0.1.0 lesson). crates.io publishing
# is prevented by `publish = false` + `git_only` in release-plz.toml instead,
# matching open-sessionbar/open-subtitle/open-recorder.

[[bin]]
name = "openvoice"
path = "src/main.rs"

[features]
default = []
# Local Canary ONNX inference (STT). Off by default so the static-musl release
# builds stay free of ONNX Runtime; enable with `--features local`.
local = ["ov-local/canary"]
# Local Qwen3-TTS via any-tts/Candle (CPU).
local-tts = ["ov-local/qwen3-tts"]
# Candle CUDA kernels for the local TTS engine (needs nvcc at build time).
local-tts-cuda = ["local-tts", "ov-local/qwen3-tts-cuda"]

[dependencies]
ov-core = { workspace = true }
ov-audio = { workspace = true }
ov-output = { workspace = true }
ov-config = { workspace = true }
ov-local = { workspace = true }
ov-providers = { workspace = true }
ov-engine = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

# SIGPIPE handling is Unix-only; Windows has no such signal.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
