[package]
name = "ov-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-voice configuration (XDG paths, provider settings, key resolution)"
publish = false

[dependencies]
ov-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
