[package]
name = "ov-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-voice local (on-device) speech engines and model management"
publish = false

[features]
default = []
# Canary 1B v2 ONNX inference via transcribe-rs/ONNX Runtime. Off by default:
# `ort` downloads ONNX Runtime binaries at build time, which the Nix sandbox
# and the static-musl release lane can't do. Enable with
# `--features ov-local/canary` (CI checks it compiles on ubuntu).
canary = ["dep:transcribe-rs"]
# Qwen3-TTS 1.7B CustomVoice via any-tts/Candle (pure Rust, CPU).
qwen3-tts = ["dep:any-tts", "dep:tracing"]
# Candle CUDA kernels for the Qwen3 engine (needs nvcc + CUDA_COMPUTE_CAP at
# build time; see flake.nix's open-voice-local-cuda).
qwen3-tts-cuda = ["qwen3-tts", "any-tts/cuda"]

[dependencies]
ov-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true, optional = true }
transcribe-rs = { version = "0.3", features = ["onnx"], optional = true }
any-tts = { version = "0.1.2", default-features = false, features = ["qwen3-tts", "download"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
